--- a/CareConnectGiver/CareConnectGiver/Base.lproj/Main.storyboard
+++ b/CareConnectGiver/CareConnectGiver/Base.lproj/Main.storyboard
@@ -57,12 +57,34 @@
                                     <navigationItem title="Francis Horton" id="OZA-tQ-IZk">
                                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="pHb-Dv-ZnU">
                                             <connections>
-                                                <segue destination="lHi-Gr-CgG" kind="unwind" unwindAction="doneWithSegue:" id="CeG-Es-HVd"/>
+                                                <segue destination="lHi-Gr-CgG" kind="unwind" identifier="doneSegue" unwindAction="doneWithSegue:" id="PjS-eG-tyc"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p4f-cN-Azr">
+                                <rect key="frame" x="155" y="308" width="69" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add Note:"/>
+                                <connections>
+                                    <segue destination="zj3-up-4GD" kind="presentation" id="mvx-wA-ZIh"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UNZ-VA-Id8">
+                                <rect key="frame" x="130" y="374" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Complete Survey"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a5d-2U-57j">
+                                <rect key="frame" x="130" y="205" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xds-xS-3Cn">
+                                <rect key="frame" x="142" y="243" width="94" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Show more ..."/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="GkX-F3-Y2w"/>
@@ -71,7 +93,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qhh-UW-yvz" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="lHi-Gr-CgG" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-65" y="-197"/>
+            <point key="canvasLocation" x="-94" y="-197"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Cum-tS-gAS">
+            <objects>
+                <viewController id="zj3-up-4GD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3UD-RE-qzz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Add Note..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="FDS-rC-QQd">
+                                <rect key="frame" x="36" y="135" width="323" height="377"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ROu-IN-esX">
+                                <rect key="frame" x="3" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Add Note" id="RKC-dk-KGO">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="oh6-am-7cX">
+                                            <connections>
+                                                <segue destination="EPq-og-DYG" kind="unwind" identifier="cancelSegueNote" unwindAction="cancelWithSegue:" id="huL-rB-klj"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="Ojt-VG-fhZ">
+                                            <connections>
+                                                <segue destination="EPq-og-DYG" kind="unwind" identifier="doneSegueNote" unwindAction="doneWithSegue:" id="iKC-Hv-3op"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HMb-M3-vcK">
+                                <rect key="frame" x="46" y="550" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Notify family immediately" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFn-YZ-d4I">
+                                <rect key="frame" x="101" y="553" width="219" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="bWH-e5-eQ8"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x04-w0-woi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="EPq-og-DYG" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="616.79999999999995" y="-194.75262368815595"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mGA-Zc-fOw">
